--- a/debian/control
+++ b/debian/control
@@ -5,12 +5,12 @@ Maintainer: Daniel Watkins <daniel@daniel-watkins.co.uk>
 Uploaders:
  Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>,
  Stefano Rivera <stefanor@debian.org>,
- Jelmer Vernooij <jelmer@debian.org>.
+ Jelmer Vernooij <jelmer@debian.org>,
  Frank Brehm <frank.brehm@profitbricks.com>
 Build-Depends:
  debhelper (>= 9),
- python-all (>= 2.7.3),
- python-all (>= 3.2.6),
+ python-all (>= 2.7),
+ python3-all (>= 3.2),
  python-docutils,
  python-epydoc,
  python-setuptools,
